----------------------------------
SimpleMail Open Source - ChangeLog
----------------------------------

2004-02-14  Bernd Gollesch <bgollesch@sime.com>

	* amiga-mui/appicon.c: Added "AppIcon Show" config handling.
	* amiga-mui/configwnd.c: Added "AppIcon Show" config.
	* amiga-mui/gui_main.c: Added "AppIcon Show" handling for "Iconified" option.
	* amiga-mui/mailtreelistclass.c: Added missing array initialization.
	* amiga-mui/shutdownwnd.c: Added config option "Don't show shutdown text".
	* amiga-mui/support.c: Added DST handling to sm_get_gmt_offset().
	* configuration.(c|h): Added "AppIcon Show" and "Don't show shutdown text" option.
	* mail.c: Removed DST handling because it's in sm_get_gmt_offset() now.
	* simplemail.c: Remove New-Flag from automatic Spam mails after moving.
	* doc/amiga/SimpleMail.guide: Added description of the "AppIcon Show"
	  option in the configuration.

2004-02-05  Release Version 0.23

2004-01-17  Bernd Gollesch <bgollesch@sime.com>

	* folder.(c|h): New function to find a folder by a given file.
	* mbox.c: As usual, some master wishes :) The destination folder is not
	  locked anymore, and a new function is called to import the mail.
	* simplemail.(c|h): New function to add a mail to a folder only with the
	  filename of the mail.

2004-01-16  Bernd Gollesch <bgollesch@sime.com>

	* amiga-mui/mainwnd.c: Added "Import mbox file..." menuitem to the folder menu.
	* lists.c: Added debug output.
	* mbox.c: Now also support import to a specific folder.
	* simplemail.(c|h): Changes for mbox import to folder.

2004-01-15  Bernd Gollesch <bgollesch@sime.com>

	* amiga-mui/appicon.(c|h), amiga-mui/gui_main.c: Some master wishes :)

2004-01-14  Bernd Gollesch <bgollesch@sime.com>

	* amiga-mui/appicon.(c|h): Moved HideIcon creation form app_init() to
	  appicon_init(). Added the ToolTypes APPICON_POSX and APPICON_POSY
	  for positioning the AppIcon with wb.lib < V44.
	  The UnSnapshot function now also updates the display of the AppIcon.